[project]
name = "setol-experiments"
version = "0.1.0"
description = "Implementation of experiments for the paper 'SETOL: A Semi-Empirical Theory of (Deep) Learning'"
authors = [
    { name = "Chris Hinrichs", email = "hinrichs@gmail.com" }
]
dependencies = [
    "torch>=2.5.0",
    "weightwatcher>=0.7.5.5",
    "torchvision>=0.20.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "notebook>=7.2.2",
    "jupyter>=1.1.1",
    "lab>=8.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/setol_experiments"]
